--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,13 +9,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity
+            android:name=".Activities.Splash_0"
+            android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".Activities.Register_2" />
+        <activity android:name=".Activities.Carrusel_3" />
+        <activity android:name=".Activities.Central_4" />
+        <activity android:name=".Activities.Logging_1" />
+        <activity android:name=".Otros.Splash_00"/>
     </application>
 
 </manifest>
