--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:27.0.2'
     implementation 'com.android.support:design:27.0.2'
     implementation 'com.android.support:cardview-v7:26.1.0'
+    compile 'com.ashokvarma.android:bottom-navigation-bar:2.0.4'
 }
