--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
         <activity android:name=".Activities.Carrusel_3" />
         <activity android:name=".Activities.Central_4" />
         <activity android:name=".Activities.Logging_1" />
-        <activity android:name=".Otros.Splash_00"/>
+        <activity android:name=".Otros.Splash_00" />
+        <activity android:name=".Activities.Intercambio_13"></activity>
     </application>
 
 </manifest>
