--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     defaultConfig {
         applicationId "com.album.mundial.eslb.mundialalbum"
         minSdkVersion 19
-        targetSdkVersion 26
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -29,5 +29,5 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:27.0.2'
     implementation 'com.android.support:design:27.0.2'
     implementation 'com.android.support:cardview-v7:26.1.0'
-    compile 'com.ashokvarma.android:bottom-navigation-bar:2.0.4'
+    implementation 'com.ashokvarma.android:bottom-navigation-bar:2.0.4'
 }
